--- a/index.html
+++ b/index.html
@@ -50,28 +50,13 @@
             <h2>Чим ми займаємося</h2>
             <ul>
                 <li>
-                    <img 
-                    src="./images/section-1-img1.jpg" 
-                    alt="Написання коду за столом"
-                    width="370"
-                    height="294"
-                    />
+                    <img src="./images/section-1-img1.jpg" alt="Написання коду за столом" width="370" height="294"/>
                 </li>
                 <li>
-                    <img 
-                    src="./images/section-1-img2.jpg" 
-                    alt="Створення мобільних додатків" 
-                    width="370" 
-                    height="294" 
-                    />
+                    <img src="./images/section-1-img2.jpg" alt="Створення мобільних додатків" width="370" height="294"/>
                 </li>
                 <li>
-                    <img 
-                    src="./images/section-1-img3.jpg" 
-                    alt="Цифрова кольорова палітра" 
-                    width="370" 
-                    height="294" 
-                    />
+                    <img src="./images/section-1-img3.jpg" alt="Цифрова кольорова палітра" width="370" height="294"/>
                 </li>
             </ul>
         </section>
@@ -79,26 +64,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/product designer.jpg" alt="Дизайнер" width="270" 
-                    height="260">
+                    <img src="./images/productdesigner.jpg" alt="Дизайнер" width="270" height="260"/>
                     <h3>Ігор Дем'яненко</h3>
                     <p lang="en">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/frontend developer.jpg" alt="Фронтенд розробник" width="270" 
-                    height="260">
+                    <img src="./images/frontenddeveloper.jpg" alt="Фронтенд розробник" width="270" height="260"/>
                     <h3>Ольга Рєпіна</h3>
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/marketing.jpg" alt="Маркетолог" width="270" 
-                    height="260">
+                    <img src="./images/marketing.jpg" alt="Маркетолог" width="270" height="260"/>
                     <h3>Микола Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/ui designer.jpg" alt="UI дизайнер" width="270" 
-                    height="260">
+                    <img src="./images/uidesigner.jpg" alt="UI дизайнер" width="270" height="260"/>
                     <h3>Михайло Єрмаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
